# bench-king

./: .gitignore  Cargo.toml  league.txt
src/: calculation_helpers.rs  client.rs  lib.rs  main.rs  models.rs
src/calculation_helpers/: calculate_bench_king_for_week.rs  calculate_optimal_points.rs  report.rs
src/models/: league.rs  matchup.rs  player.rs  playoff.rs  positions.rs  roster.rs  settings.rs  state.rs  user.rs
