[package]
name = "bench-king-sleeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.15", features = ["derive", "env"] }
http-cache-reqwest = "0.14.0"
http-cache-semantics = { version = "2.1.0", features = ["reqwest"] }
reqwest = "0.12.5"
reqwest-middleware = { version = "0.3.3", features = ["json"] }
serde = { version = "1.0.207", features = ["serde_derive", "derive"] }
serde_json = "1.0.124"
serde_path_to_error = "0.1.14"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }

[dev-dependencies]
serde_path_to_error = "0.1.14"
